# solopic

./: .gitignore  Cargo.toml  LICENSE  README.md  mcp.json
crates/pic-app/: Cargo.toml  tauri.conf.json
crates/pic-app/capabilities/: default.json
crates/pic-app/icons/: icon.icns
crates/pic-app/src/: main.rs
crates/pic-app/ui/: app.js  i18n.js  index.html  style.css
crates/pic-cli/: Cargo.toml
crates/pic-cli/src/: main.rs
crates/pic-core/: Cargo.toml
crates/pic-core/src/: adjust.rs  crop.rs  enhance.rs  io.rs  lib.rs  locale.rs  rename.rs  report.rs
crates/pic-mcp/: Cargo.toml
crates/pic-mcp/src/: main.rs
docs/: RESEARCH.md
docs/.solomd/: session.cdad3d78-e508-44a4-a7f4-9f2d1793a0e8.json
site/: i18n.js  index.html  site.js  style.css
