[workspace]
resolver = "2"
members = ["crates/pic-core", "crates/pic-cli", "crates/pic-mcp", "crates/pic-app"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["guangtoutong"]
repository = "https://github.com/zhitongblog/solopic"

[workspace.dependencies]
pic-core = { path = "crates/pic-core" }
image = "0.25"
imageproc = "0.25"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
