[package]
name = "pic-app"
description = "pic 批量图像处理图形界面"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pic-core.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
image.workspace = true
base64 = "0.22"
