[package]
name = "pic-cli"
description = "pic 批量图像处理命令行"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "pic"
path = "src/main.rs"

[dependencies]
pic-core.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
