[package]
name = "pic-core"
description = "批量图像处理核心库：按边裁剪、映射改名、亮度对比度调整、文档智能增强"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sys-locale = "0.3"
image.workspace = true
imageproc.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
