[package]
name = "pic-mcp"
description = "pic 批量图像处理 MCP Server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pic-core.workspace = true
rmcp = { version = "2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
schemars = "1"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
